--- a/DangNhap/QuanLyDaoTao.csproj
+++ b/DangNhap/QuanLyDaoTao.csproj
@@ -296,6 +296,9 @@
   <ItemGroup>
     <None Include="Resources\no_avatar.jpg" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\19d8a051527db023e96c1.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
        Other similar extension points exist, see Microsoft.Common.targets.
