add Giảng Viên report

--- a/DangNhap/App.config
+++ b/DangNhap/App.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
     <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System">
@@ -9,6 +9,7 @@
     <add name="DangNhap.Properties.Settings.QuanLyDaoTaoConnectionString"
       connectionString="Data Source=HoangVanVietAnh;Initial Catalog=QuanLyDaoTao;Integrated Security=True"
       providerName="System.Data.SqlClient" />
+    <add name="QuanLyDaoTaoConnectionString" connectionString="XpoProvider=MSSqlServer;data source=HoangVanVietAnh;integrated security=SSPI;initial catalog=QuanLyDaoTao" />
   </connectionStrings>
   <applicationSettings>
     <DevExpress.LookAndFeel.Design.AppSettings>
