--- a/DangNhap/QuanLyDaoTao.csproj
+++ b/DangNhap/QuanLyDaoTao.csproj
@@ -347,6 +347,9 @@
   <ItemGroup>
     <None Include="Resources\iconfinder_print_172530.svg" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\student_add-512.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
        Other similar extension points exist, see Microsoft.Common.targets.
