--- a/DangNhap/QuanLyDaoTao.csproj
+++ b/DangNhap/QuanLyDaoTao.csproj
@@ -371,6 +371,15 @@
   <ItemGroup>
     <None Include="Resources\iconfinder_minus_13038821.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\delete-user-512.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\remove.svg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\add-friend.svg" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
        Other similar extension points exist, see Microsoft.Common.targets.
