--- a/DangNhap/App.config
+++ b/DangNhap/App.config
@@ -10,6 +10,7 @@
       connectionString="Data Source=HoangVanVietAnh;Initial Catalog=QuanLyDaoTao;Integrated Security=True"
       providerName="System.Data.SqlClient" />
     <add name="QuanLyDaoTaoConnectionString" connectionString="XpoProvider=MSSqlServer;data source=HoangVanVietAnh;integrated security=SSPI;initial catalog=QuanLyDaoTao" />
+    <add name ="Myconn" connectionString="Data Source=HoangVanVietAnh;Initial Catalog=QuanLyDaoTao;Integrated Security=True" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <applicationSettings>
     <DevExpress.LookAndFeel.Design.AppSettings>
