--- a/DangNhap/QuanLyDaoTao.csproj
+++ b/DangNhap/QuanLyDaoTao.csproj
@@ -65,6 +65,7 @@
     <Reference Include="DevExpress.XtraScheduler.v18.2.Reporting, Version=18.2.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data.Linq" />
     <Reference Include="System.Messaging" />
