--- a/DangNhap/QuanLyDaoTao.csproj
+++ b/DangNhap/QuanLyDaoTao.csproj
@@ -33,6 +33,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="CrystalDecisions.CrystalReports.Engine, Version=13.0.3500.0, Culture=neutral, PublicKeyToken=692fbea5521e1304, processorArchitecture=MSIL" />
+    <Reference Include="CrystalDecisions.ReportSource, Version=13.0.3500.0, Culture=neutral, PublicKeyToken=692fbea5521e1304, processorArchitecture=MSIL" />
+    <Reference Include="CrystalDecisions.Shared, Version=13.0.3500.0, Culture=neutral, PublicKeyToken=692fbea5521e1304, processorArchitecture=MSIL" />
+    <Reference Include="CrystalDecisions.Windows.Forms, Version=13.0.3500.0, Culture=neutral, PublicKeyToken=692fbea5521e1304, processorArchitecture=MSIL" />
     <Reference Include="DevExpress.BonusSkins.v18.2" />
     <Reference Include="DevExpress.Charts.v18.2.Core, Version=18.2.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="DevExpress.CodeParser.v18.2, Version=18.2.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
@@ -63,12 +67,15 @@
     <Reference Include="DevExpress.XtraScheduler.v18.2, Version=18.2.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="DevExpress.XtraScheduler.v18.2.Core, Version=18.2.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="DevExpress.XtraScheduler.v18.2.Reporting, Version=18.2.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
+    <Reference Include="FlashControlV71, Version=1.0.3187.32366, Culture=neutral, PublicKeyToken=692fbea5521e1304" />
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data.Linq" />
     <Reference Include="System.Messaging" />
+    <Reference Include="System.Web" />
+    <Reference Include="System.Web.Services" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -79,6 +86,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="dsSinhVienTheoLopReport.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="dsSinhVienTheoLopReport.Designer.cs">
+      <DependentUpon>dsSinhVienTheoLopReport.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmDangNhap.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -103,6 +116,12 @@
     <Compile Include="frmDTSinhVien.Designer.cs">
       <DependentUpon>frmDTSinhVien.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmIn.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmIn.Designer.cs">
+      <DependentUpon>frmIn.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmPhanCong.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -114,6 +133,12 @@
     </Compile>
     <Compile Include="frmPreviewReport.Designer.cs">
       <DependentUpon>frmPreviewReport.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmReviewInTKB.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmReviewInTKB.Designer.cs">
+      <DependentUpon>frmReviewInTKB.cs</DependentUpon>
     </Compile>
     <Compile Include="frmSinhVien.cs">
       <SubType>Form</SubType>
@@ -145,6 +170,12 @@
     <Compile Include="giangVienReport.Designer.cs">
       <DependentUpon>giangVienReport.cs</DependentUpon>
     </Compile>
+    <Compile Include="inThoiKhoaBieu.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>inThoiKhoaBieu.rpt</DependentUpon>
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="KetNoiCoSoDuLieu.designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -175,6 +206,15 @@
     <Compile Include="RoundPictureBox.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="thoiKhoaBieuGVReport.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="thoiKhoaBieuGVReport.Designer.cs">
+      <DependentUpon>thoiKhoaBieuGVReport.cs</DependentUpon>
+    </Compile>
+    <EmbeddedResource Include="dsSinhVienTheoLopReport.resx">
+      <DependentUpon>dsSinhVienTheoLopReport.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmDangNhap.resx">
       <DependentUpon>frmDangNhap.cs</DependentUpon>
     </EmbeddedResource>
@@ -187,11 +227,17 @@
     <EmbeddedResource Include="frmDTSinhVien.resx">
       <DependentUpon>frmDTSinhVien.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="frmIn.resx">
+      <DependentUpon>frmIn.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmPhanCong.resx">
       <DependentUpon>frmPhanCong.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmPreviewReport.resx">
       <DependentUpon>frmPreviewReport.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmReviewInTKB.resx">
+      <DependentUpon>frmReviewInTKB.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmSinhVien.resx">
       <DependentUpon>frmSinhVien.cs</DependentUpon>
@@ -207,6 +253,10 @@
     </EmbeddedResource>
     <EmbeddedResource Include="giangVienReport.resx">
       <DependentUpon>giangVienReport.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="inThoiKhoaBieu.rpt">
+      <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
+      <LastGenOutput>inThoiKhoaBieu.cs</LastGenOutput>
     </EmbeddedResource>
     <EmbeddedResource Include="listGiangVienReport.resx">
       <DependentUpon>listGiangVienReport.cs</DependentUpon>
@@ -230,6 +280,9 @@
     </Compile>
     <EmbeddedResource Include="frmGiangVien.resx">
       <DependentUpon>frmGiangVien.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="thoiKhoaBieuGVReport.resx">
+      <DependentUpon>thoiKhoaBieuGVReport.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="App.config" />
     <None Include="KetNoiCoSoDuLieu.dbml">
@@ -362,6 +415,7 @@
   </ItemGroup>
   <ItemGroup>
     <Service Include="{3259AA49-8AA1-44D3-9025-A0B520596A8C}" />
+    <Service Include="{C0C07587-41A7-46C8-8FBD-3F9C8EBE2DDC}" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\no_avatar.jpg" />
